--- a/tarbalho 1/style.css
+++ b/tarbalho 1/style.css
@@ -2,15 +2,39 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Inter", sans-serif;
 }
 
 :root{
-    --almost-white: #fffdfa
-    --dark-sapce-blue: #00001a
-    --gunmetal: #5e607a
-    --vermillion: #f15d51
+    --almost-white: #fffdfa;
+    --dark-sapce-blue: #00001a;
+    --gunmetal: #5e607a;
+    --vermillion: #f15d51;
+    --yellow: #e9aa52;
+    --silver: #c5c6ce;
 }
 
 body{
     padding: 1.75rem 1rem;
+    background-color: var(--almost-white);
+}
+
+.header-mobile{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+.header-mobile button{
+    border: none;
+    background: none;
+}
+
+.primeira-secao{
+    margin-bottom: 4rem;
+}
+
+.primeira-secao img{
+    width: 100%;
+    margin-bottom: 1.5rem;
 }
