finalizaçao do css do mobile

--- a/tarbalho 1/style.css
+++ b/tarbalho 1/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 :root{
@@ -37,4 +38,64 @@ body{
 .primeira-secao img{
     width: 100%;
     margin-bottom: 1.5rem;
+}
+
+.primeira-secao h1{
+    font-size: 2.5rem ;
+    color: var(--dark-sapce-blue);
+    margin-bottom: 1rem;
+    line-height: 100%;
+}
+
+.primeira-secao p{
+    font-size: 0.9375rem;
+    line-height: 1.625rem;
+    color: var(--gunmetal);
+    margin-bottom: 1.5rem;
+}
+ 
+.primeira-secao button{
+    padding: 0.75rem 2rem;
+    background-color: var(--vermillion);
+    border: none;
+    text-transform: uppercase;
+    color: var(--almost-white);
+    font-weight: 700;
+    font-size: 0.875rem;
+    letter-spacing: 0.275rem;
+    line-height: 1.5rem;
+}
+
+.segunda-secao{
+    background-color: var(--dark-sapce-blue);
+    margin-bottom: 4rem;
+    padding: 1.5rem 1.1rem;
+}
+
+.bb-mb-pb{
+    border-bottom: var(--gunmetal);
+    margin-bottom: 1.75rem;
+    padding-bottom: 1.75rem;
+}
+
+
+
+.segunda-secao h1{
+    color: var(--yellow);
+    font-size: 2rem;
+    line-height: 100%;
+}
+
+.segunda-secao h3{
+    color: var(--almost-white);
+    font-size: 1.25rem;
+    font-weight: 800;
+    margin-bottom: 0.5rem;
+}
+
+.segunda-secao p{
+    color: var(--silver);
+    font-size: 0.9375rem;
+    line-height: 1.625rem;
+    margin-bottom: 2.2rem;
 }
