--- a/tarbalho 1/style.css
+++ b/tarbalho 1/style.css
@@ -19,7 +19,14 @@ body{
     padding: 1.75rem 1rem;
     background-color: var(--almost-white);
 }
-
+body.menu-open::before{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0,0,26,0.5);
+    top: 0;
+    left: 0;
+}
 .header-mobile{
     display: flex;
     justify-content: space-between;
@@ -29,6 +36,24 @@ body{
 .header-mobile button{
     border: none;
     background: none;
+    width: fit-content;
+}
+
+.header-mobile nav{
+    position: fixed;
+    background-color: var(--almost-white);
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 16rem;
+    z-index: 999;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.header-mobile nav button{
+    margin-left: auto;
 }
 
 .primeira-secao{
@@ -98,4 +123,35 @@ body{
     font-size: 0.9375rem;
     line-height: 1.625rem;
     margin-bottom: 2.2rem;
+}
+
+.terceira-secao > div{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+}
+.terceira-secao img{
+    max-width: 6.25rem;
+
+}
+
+.terceira-secao strong{
+    color: var(--silver);
+    font-size: 2rem;
+    line-height: 100%;
+}
+
+.terceira-secao h2{
+    font-size: 1.125rem;
+    color: var(--dark-sapce-blue);
+    font-weight: 800;
+    line-height: 1.5rem;
+    margin-block: 0.6rem;
+}
+
+.terceira-secao p{
+    font-size: 0.9375rem;
+    line-height: 1.625rem;
+    color: var(--gunmetal);
 }
