--- a/style.css
+++ b/style.css
@@ -27,8 +27,12 @@ header {
 main {
     background-color: var(--white);
     padding: 2rem;
+    border-radius: 1.5625rem 1.5625rem 0 0;
 }
-.conta, .gorjeta {
+
+.conta, 
+.gorjeta, 
+.pessoas{
     margin-bottom: 2rem;
 }
 
@@ -38,8 +42,6 @@ main {
     color: var(--green-500);
     font-weight: 700;
 }
-
-
 .conta div,
 .pessoas div {
     margin-top: 0.4rem;
@@ -50,8 +52,6 @@ main {
     justify-content: space-between;
     border-radius: 0.3125rem;
 }
-
-
 .conta input,
 .pessoas input {
     border: none;
@@ -63,19 +63,14 @@ main {
     color: var(--green-800);
     outline: none;
 }
-
-
 .conta input::placeholder,
 .pessoas input::placeholder {
     color: var(--green-300);
 }
-
-
 .conta:has(input:focus) div,
 .pessoas:has(input:focus) div{
     outline: 2px solid var(--light-green);
 }
-
 .gorjeta div {
     margin-top: 1rem;
     display: grid;
@@ -98,11 +93,41 @@ main {
     text-align: center;
     color: var(--green-500);
 }
-
 .gorjeta #outra::placeholder {
     color: var(--green-300);
 }
 
 .pessoas #erro {
     display: none;
+}
+
+.resultados {
+    background-color: var(--green-800);
+    border-radius: 0.9375rem;
+    padding: 1.5rem;
+}
+
+.resultados div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.resultados p {
+    color: var(--green-400);
+    font-size: 0.8125rem;
+}
+
+.resultados p strong {
+    color: var(--white);
+    font-size: 1rem;
+}
+
+.resultados div > strong { 
+    color: var(--light-green);
+    font-size: 2rem;
+}
+
+.resultados .gorjeta-total {
+    margin-bottom: 1.25rem;
 }
