--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
     --green-800: #00474B;
     --light-green: #26C2AE;
     --white: #FFFFFF;
+    --green-hover: #9FE8DF;
+    --danger: #E17457;
 }
 body {
     background-color: var(--green-200);
@@ -43,7 +45,7 @@ main {
     font-weight: 700;
 }
 .conta div,
-.pessoas div {
+.pessoas .input-box {
     margin-top: 0.4rem;
     background-color: var(--green-100);
     padding: 0.4rem 1.2rem;
@@ -70,6 +72,14 @@ main {
 .conta:has(input:focus) div,
 .pessoas:has(input:focus) div{
     outline: 2px solid var(--light-green);
+    .conta:has(input:hover) div,
+.pessoas:has(input:focus) .input-box,
+.pessoas:has(input:hover) .input-box,
+.gorjeta #outra:focus,
+.gorjeta #outra:hover {
+    outline: 2px solid var(--light-green);
+    cursor: pointer;
+}
 }
 .gorjeta div {
     margin-top: 1rem;
@@ -87,6 +97,13 @@ main {
     background-color: var(--green-800);
     color: var(--white);
 }
+
+.gorjeta input[type = "button"]:hover,
+.resultados button:hover {
+    background-color: var(--green-hover);
+    cursor: pointer;
+}
+
 .gorjeta #outra {
     width: 100%;
     background-color: var(--green-100);
@@ -96,9 +113,20 @@ main {
 .gorjeta #outra::placeholder {
     color: var(--green-300);
 }
+.pessoas .textos {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+.pessoas #erro-div {
+    outline: 2px solid var(--danger);
+}
 .pessoas #erro {
     display: none;
+    font-size: 0.75rem;
+    color: var(--danger);
+    font-weight: 700;
 }
 
 .resultados {
@@ -107,6 +135,11 @@ main {
     padding: 1.5rem;
 }
 
+.conta input::-webkit-inner-spin-button,
+.pessoas input::-webkit-inner-spin-button,
+.gorjeta input::-webkit-inner-spin-button {
+        display: none;
+    }
 .resultados div {
     display: flex;
     justify-content: space-between;
